add recipe htmls into folder recipes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="super-nachos.html">Super Nachos</a></li>
-        <li><a href="7-layer-dips.html">7-Layer Dip</a></li>
-        <li><a href="philly-cheese-steak.html">Philly Cheesesteak</a></li>
+        <li><a href="recipes/super-nachos.html">Super Nachos</a></li>
+        <li><a href="recipes/7-layer-dips.html">7-Layer Dip</a></li>
+        <li><a href="recipes/philly-cheese-steak.html">Philly Cheesesteak</a></li>
     </ul>
     
     
